# pointcloud-quick3d

./: .gitignore  AndroidUtils.cpp  AndroidUtils.h  CMakeLists.txt  CornerBracketGeometry.cpp  CornerBracketGeometry.h  EventGrabGuard.cpp  EventGrabGuard.h  EventStealingPreventor.cpp  EventStealingPreventor.h  Main.qml  PcdLoader.cpp  PcdLoader.h  PointCloudGeometry.cpp  PointCloudGeometry.h  README.md  main.cpp  res.qrc
Components/: AppTheme.qml  AppTools.qml  DPadButton.qml
Pages/: PC3DToolbar.qml  View3DForPC.qml
Views/: AxisIndicator.qml  DPadPC.qml  PickInfoPanel.qml  ToolbarPC.qml  View3DPC.qml
android/: AndroidManifest.xml
android/assets/: PCD_FORMAT.md
android/res/values/: styles.xml
shaders/: cornerbracket.frag  cornerbracket.vert  pointcloud.frag  pointcloud.vert
